# Pirradazish

./: .gitmodules  CMakeLists.txt  README.md  main.c
Neshan/: CMakeLists.txt
Neshan/Include/Neshan/: Config.h
Neshan/Include/Neshan/Linker/: Section.h  StringsLinkerSection.ld
Neshan/Include/Neshan/Tokenization/: Token.h  Tokenizer.h
Neshan/Source/Tokenization/: Tokenizer.c
